--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "axios": "^1.7.9",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-dropzone": "^14.3.5",
+    "react-icons": "^5.5.0",
+    "react-markdown": "^9.0.3",
+    "remotion": "^4.0.266",
+    "subtitle": "^4.2.2-alpha.0",
+    "subtitles-parser-vtt": "^0.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
